# ca-prep

./: LEARNER_SUMMARY.md  LOG.csv  README.md  pyproject.toml
1-governance-and-security/: consolidation-questions.md
modules/01-governance/: 01-governance-handbook-v2.md  01-governance-handbook-v3.md  01-governance-handbook.md
modules/01-governance/questions/01-core-concepts/: base.md
modules/01-governance/questions/01-core-concepts/attempts/: 01-core-concepts-attempt-1.md  (+1 more)
modules/01-governance/questions/02-risk-and-failure-modes/: base.md
modules/01-governance/questions/03-trustworthy-ai/: base.md
modules/01-governance/questions/04-nist-ai-rmf/: base.md
modules/01-governance/questions/05-eu-ai-act/: base.md
modules/01-governance/questions/06-enterprise-ai-security/: base.md
modules/01-governance/questions/07-mlops-and-lifecycle/: base.md
modules/01-governance/questions/08-commercialisation/: base.md
modules/01-governance/questions/09-enterprise-operating-model/: base.md
modules/01-governance/questions/10-scenario-questions/: base.md
modules/01-governance/questions/11-executive-communication/: base.md
modules/01-governance/questions/12-deep-reflection/: base.md
modules/governance/questions/sheet-1/: base.md
protocols/: generate-question-sheet.md  mark-attempt.md  write-handbook-gear.md  write-handbook.md
resources/: 01-governance-audio-overview.txt  EU-AI-Act.md
scripts/: cli.py  create_blank_attempt.py  extract_base_from_attempt.py  finalise_attempt.py  summarise_attempt_marks.py
templates/: attempt.md  base-question-sheet.md
(+5 files in other folders)
