[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ca-prep"
version = "0.1.0"
description = "Commercial Analyst role preparation workflow CLI"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["scripts*"]

[project.scripts]
ca-prep = "scripts.cli:main"
